correct font, red arrow, better alignment of nav-bar items

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,15 +1,18 @@
 nav {
+  position: fixed;
   height: 120px;
   width: 100%;
   background-color: #4056A1;
   color: #FFFFFF;
   padding: 1.5em;
+  z-index: 1000;
 }
 
 .nav-bar {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
+  margin-top: 0.5em;
 }
 
 .nav-bar .left-side {
@@ -19,10 +22,15 @@ nav {
 
 .nav-bar .left-side span {
   font-family:'Bungee', sans-serif;
+  font-size: 1.5em;
 }
 
 .nav-bar .right-side {
   display: flex;
   align-items: center;
   flex-direction: column;
+}
+
+.nav-bar i { 
+  color:red;
 }
